fix: cards spacing home page

--- a/client/src/components/molecules/Cards/CategoryCard/CategoryCard.module.scss
+++ b/client/src/components/molecules/Cards/CategoryCard/CategoryCard.module.scss
@@ -2,9 +2,6 @@
 
 .CategoryCard {
   background-color: $card-bg;
-  aspect-ratio: 1/1;
-  width: 260px !important;
-  max-width: 260px;
 
   &Header {
     @include flexColumn();
