--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -42,6 +42,7 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       justify-items: center;
+      align-items: stretch;
       row-gap: $large;
     }
   }
